--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -3,5 +3,5 @@ body {
     padding: 0;
     box-sizing: border-box;
     background-color: #F5F5DD;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica;
 }
